// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hook tests Callback 1`] = `
<ComponentWithCallback
  callback={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div>
    nodejs
  </div>
</ComponentWithCallback>
`;

exports[`Hook tests Updated props 1`] = `
<ComponentWithHook
  hasUpdated={false}
>
  <div>
    Initial Render
  </div>
</ComponentWithHook>
`;

exports[`Hook tests Updated props 2`] = `
<ComponentWithHook
  hasUpdated={true}
>
  <div>
    Updated Name
  </div>
</ComponentWithHook>
`;
